--- a/source/CapFrameX.View/ComparisonView.xaml
+++ b/source/CapFrameX.View/ComparisonView.xaml
@@ -144,7 +144,11 @@
 				<ToggleButton Margin="10 0 0 0" Style="{StaticResource MaterialDesignSwitchToggleButton}"
 							  ToolTip="Grouping" IsChecked="{Binding UseComparisonGrouping}"/>
 			</StackPanel>
-			<ComboBox Grid.Column="2" Width="110" VerticalAlignment="Center" Margin="30 0 0 5" materialDesign:HintAssist.Hint="Second metric"
+            <StackPanel Grid.Column="2" Margin="30 10 0 0" VerticalAlignment="Center" Orientation="Horizontal" HorizontalAlignment="Right">
+                <TextBlock Text="Metrics" Margin="0 5 0 0" HorizontalAlignment="Center"/>
+                <materialDesign:PopupBox  Margin="0 0 0 0" HorizontalAlignment="Center" StaysOpen="True" PlacementMode="TopAndAlignCentres">
+                <StackPanel Width="350" Orientation="Horizontal">
+			<ComboBox Width="135" VerticalAlignment="Center" Margin="25 0 0 5" materialDesign:HintAssist.Hint="Second metric"
 					  Visibility="{Binding IsBarChartTabActive, Converter={StaticResource TrueToVisibleConverter}}"
 					  materialDesign:HintAssist.IsFloating="True" MaxDropDownHeight="330" materialDesign:ComboBoxAssist.ClassicMode="True"
 					  ItemsSource="{Binding SecondMetricItems}" SelectedItem="{Binding SelectedSecondaryMetric}">
@@ -154,7 +158,7 @@
 					</DataTemplate>
 				</ComboBox.ItemTemplate>
 			</ComboBox>
-			<ComboBox Grid.Column="3" Width="110" VerticalAlignment="Center" Margin="30 0 0 5" materialDesign:HintAssist.Hint="Third metric"
+			<ComboBox Width="135" VerticalAlignment="Center" Margin="30 0 0 5" materialDesign:HintAssist.Hint="Third metric"
 					  Visibility="{Binding IsBarChartTabActive, Converter={StaticResource TrueToVisibleConverter}}"
 					  materialDesign:HintAssist.IsFloating="True" MaxDropDownHeight="360" materialDesign:ComboBoxAssist.ClassicMode="True"
 					  ItemsSource="{Binding MetricItems}" SelectedItem="{Binding SelectedThirdMetric}">
@@ -164,7 +168,11 @@
 					</DataTemplate>
 				</ComboBox.ItemTemplate>
 			</ComboBox>
-			<StackPanel Grid.Column="1" Margin="30 8 0 0" VerticalAlignment="Center" Orientation="Horizontal"
+                </StackPanel>
+            </materialDesign:PopupBox>
+
+            </StackPanel>
+            <StackPanel Grid.Column="1" Margin="30 8 0 0" VerticalAlignment="Center" Orientation="Horizontal"
 						Visibility="{Binding IsBarChartTabActive, Converter={StaticResource TrueToCollapsedConverter}}">
 				<TextBlock VerticalAlignment="Center">Range slider:</TextBlock>
 				<ToggleButton Name="RangeSliderActiveToggleButton" Margin="10 0 0 0" Style="{StaticResource MaterialDesignSwitchToggleButton}"
@@ -177,17 +185,32 @@
 				<ToggleButton Name="ContextLegendActiveToggleButton" Margin="10 0 0 0" Style="{StaticResource MaterialDesignSwitchToggleButton}"
 								  ToolTip="Show context legend" IsChecked="{Binding IsContextLegendActive}"/>
 			</StackPanel>
-
-			<ComboBox Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="30 0 30 5" materialDesign:HintAssist.Hint="Comparison context"
+            <StackPanel Grid.Column="2"  Margin="0 10 -100 0" VerticalAlignment="Center" Orientation="Horizontal" HorizontalAlignment="Right">
+                <TextBlock Text="Context" Margin="0 5 0 0"  HorizontalAlignment="Center"/>
+                <materialDesign:PopupBox  Margin="0 0 0 0" HorizontalAlignment="Center" StaysOpen="True" PlacementMode="TopAndAlignCentres">
+                    <StackPanel Width="350" Orientation="Horizontal">
+                        <ComboBox Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="30 0 30 5" materialDesign:HintAssist.Hint="1st context"
 					materialDesign:HintAssist.IsFloating="True" MaxDropDownHeight="150" materialDesign:ComboBoxAssist.ClassicMode="True"
-					ItemsSource="{Binding ComparisonContextItems}" SelectedItem="{Binding SelectedComparisonContext}">
-				<ComboBox.ItemTemplate>
-					<DataTemplate>
-						<TextBlock Text="{Binding Converter={StaticResource EnumDescriptionConverter}}"/>
-					</DataTemplate>
-				</ComboBox.ItemTemplate>
-			</ComboBox>
-		</Grid>
+					ItemsSource="{Binding ComparisonContextItems}" SelectedItem="{Binding SelectedComparisonContextA}">
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Converter={StaticResource EnumDescriptionConverter}}"/>
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
+                        </ComboBox>
+                        <ComboBox Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="30 0 200 5" materialDesign:HintAssist.Hint="2nd context"
+					materialDesign:HintAssist.IsFloating="True" MaxDropDownHeight="150" materialDesign:ComboBoxAssist.ClassicMode="True"
+					ItemsSource="{Binding ComparisonContextItems}" SelectedItem="{Binding SelectedComparisonContextB}">
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Converter={StaticResource EnumDescriptionConverter}}"/>
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
+                        </ComboBox>
+                    </StackPanel>
+                </materialDesign:PopupBox>
+            </StackPanel>
+        </Grid>
 		<StackPanel Margin="5 10 5 0" Grid.Column="1" Grid.RowSpan="2" Orientation="Vertical">
 			<TextBox IsReadOnly="True" Background="#e6e6e6" materialDesign:HintAssist.Hint="Comparisons" />
 			<Border Margin="0 5 0 5" BorderThickness="1" BorderBrush="#CCC" VerticalAlignment="Stretch">
